dataset1235/2025-2/2868285114/users/154215138/executions/4269873056_1559799913.log
== SUBMISSION (2025-08-26 22:05:26)
-- CODE: 
numero = int(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:04:36)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
4.0
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
0.0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
1000000.0
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
100.0
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
225.0
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
14400.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:05:11)
-- CODE: 
numero = int(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
14400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:04:15)
-- CODE: 
numero = float(input()
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = float(input()
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = float(input()
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = float(input()
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = float(input()
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = float(input()
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = float(input()
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:04:29)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
4.0
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
0.0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
1000000.0
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
100.0
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
225.0
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
14400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
